# detail2md

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.obsidian/: app.json  workspace.json
src/detail2md/: __init__.py  cli.py  config.py  db.py  markdown_writer.py  parsers.py  pipeline.py  verify.py
